# BigInteger

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: actions.yml
src/: biginteger.cpp  biginteger.hpp  main.cc  tests.cc
test/: bi_test.cpp  bi_time_test.cpp
test/res/: timer.hpp
